# embedfast

./: README.md  pyproject.toml
app/: app.py  request.py
